# medical-diagnostics-agent

./: docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push.yml
medical_diagnostics_agent/: __init__.py  agent_config.json  agents.py  main.py
medical_diagnostics_agent/skills/medical-diagnostics/: skill.yaml
tests/: test_main.py
